rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__three-intvalues__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Value=1234567
  class: IntValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      Int64: 1234567
  children: []
- referent: referent-1
  name: Value=1337
  class: IntValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      Int64: 1337
  children: []
- referent: referent-2
  name: Value=-7654321
  class: IntValue
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
    Value:
      Int64: -7654321
  children: []
